# cpp-snippets

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  README.org
STLRecipes/: CMakeLists.txt
STLRecipes/include/stlrecipes/: vector_utils.hpp
STLRecipes/src/: rpn_calculator.cpp  vector_love.cpp  vector_utils.cpp
STLRecipes/test/: CMakeLists.txt
STLRecipes/test/src/: catch_test.cpp  rpn_calculator_test.cpp  vector_test.cpp
STLrecipes/: CMakeLists.txt
STLrecipes/cmake/: STLRecipesConfig.cmake.in
STLrecipes/include/stlrecipes/: rpn_calculator.hpp
STLrecipes/src/: main.cpp
STLrecipes/test/: CMakeLists.txt
STLrecipes/test/src/: catch_test.cpp
app/: CMakeLists.txt
app/src/: main.cpp  rpn_calculator.cpp
cmake/Modules/: Catch.cmake  CatchAddTests.cmake  ParseAndAddCatchTests.cmake
cpp-snippets/: CMakeLists.txt
cpp-snippets/cmake/: SnippetsConfig.cmake.in
cpp-snippets/include/snippets/: rpn_calculator.hpp  vector_utils.hpp
cpp-snippets/src/: array.proto  main.cpp  matrix.cpp  snippets.hpp  vector_utils.cpp
cpp-snippets/src/snippets/: abstract_class.hpp  avx2_dot_product.hpp  avx2_hello.hpp  default_class.hpp  granting_access_private_inheritance.hpp  protobuf.cpp  ranges_basic.hpp  reference_from_pointer.cpp  return_type.hpp  rpn_calculator.cpp  rpn_calculator.hpp  unique_ptr.hpp
cpp-snippets/test/: CMakeLists.txt
cpp-snippets/test/src/: catch_test.cpp  rpn_calculator_test.cpp  vector_test.cpp
cpp-snippets/tests/snippets/: test_abstract_class.cpp  test_avx2.cpp  test_default_class.cpp  test_override.cpp  test_ranges_basic.cpp  test_return_type.cpp  test_rpn_calculator.cpp  test_unique_ptr.cpp  test_utf_string.cpp  test_vector.cpp
